@@ -50,6 +50,9 @@ HIGHLIGHTS
  -- srun will no longer read in SLURM_CPUS_PER_TASK. This means you will
     implicitly have to specify -c on your srun calls, or set the new
     SRUN_CPUS_PER_TASK env var to accomplish the same thing.
+ -- Remove connect_timeout and timeout options from JobCompParams as there's no
+    longer a connectivity check happening in the jobcomp/elasticsearch plugin
+    when setting the location off of JobCompLoc.
 
 CONFIGURATION FILE CHANGES (see man appropriate man page for details)
 =====================================================================
