@@ -100,6 +100,9 @@ documents those changes that are of interest to users and administrators.
  -- Handle scontrol setdebug[flags] and scontrol reconfigure in slurmscriptd.
  -- openapi/v0.0.38 - add /licenses endpoint.
  -- slurmrestd - only compile JWT authentication plugin if libjwt is present.
+ -- Remove connect_timeout and timeout options from JobCompParams as there's no
+    longer a connectivity check happening in the jobcomp/elasticsearch plugin
+    when setting the location off of JobCompLoc.
 
 * Changes in Slurm 21.08.7
 ==========================
